--- a/package.json
+++ b/package.json
@@ -10,19 +10,34 @@
     "ts:check": "tsc"
   },
   "dependencies": {
+    "@clerk/clerk-expo": "^0.19.3",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@types/react": "~18.2.14",
+    "deepmerge": "^4.3.1",
     "expo": "~49.0.8",
+    "expo-auth-session": "~5.0.2",
+    "expo-constants": "^14.4.2",
+    "expo-image": "~1.3.3",
+    "expo-secure-store": "^12.5.0",
     "expo-status-bar": "~1.6.0",
+    "expo-web-browser": "~12.3.2",
+    "lucide-react-native": "^0.279.0",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-native": "0.72.4",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-paper": "^5.10.6",
+    "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
-    "typescript": "^5.1.3",
-    "expo-image": "~1.3.2"
+    "react-native-screens": "~3.22.0",
+    "react-native-svg": "^13.14.0",
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "tailwindcss": "3.3.2"
   },
   "private": true
 }
